# snake_rs

./: Cargo.toml  README.md  index.html
pkg/: package.json  rendering.d.ts  rendering.js  rendering_bg.wasm  rendering_bg.wasm.d.ts
src/: camera.rs  index.html  lib.rs  main.rs  math.rs  shader.wgsl  snake.rs  struct.rs  texture.rs  wasm_lib.rs
