[package]
name = "rendering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"]}
cgmath = "0.18"
serde_json = "1.0.0"
anyhow = "1.0"
rand = "0.7.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[profile.release]
#strip = true  # Automatically strip symbols from the binary.
#opt-level = "z"
#lto = true
#codegen-units = 1
#panic = "abort"